scripts/nullaway/wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8.txt
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:101: error: [NullAway] dereferenced expression primary is @Nullable
            if (effectiveTypes[i].equalsTo(primary.showType()) || effectiveTypes[i].equalsTo(secondary.showType())) {
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:101: error: [NullAway] dereferenced expression secondary is @Nullable
            if (effectiveTypes[i].equalsTo(primary.showType()) || effectiveTypes[i].equalsTo(secondary.showType())) {
                                                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:115: error: [NullAway] dereferenced expression primary is @Nullable
            if (immuneTypes[i].equalsTo(primary.showType()) || immuneTypes[i].equalsTo(secondary.showType())) {
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:115: error: [NullAway] dereferenced expression secondary is @Nullable
            if (immuneTypes[i].equalsTo(primary.showType()) || immuneTypes[i].equalsTo(secondary.showType())) {
                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:129: error: [NullAway] dereferenced expression primary is @Nullable
            if (resistantTypes[i].equalsTo(primary.showType()) || resistantTypes[i].equalsTo(secondary.showType())) {
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/types/Type.java:129: error: [NullAway] dereferenced expression secondary is @Nullable
            if (resistantTypes[i].equalsTo(primary.showType()) || resistantTypes[i].equalsTo(secondary.showType())) {
                                                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:187: error: [NullAway] dereferenced expression sampleMember.getCircumvent() is @Nullable
                moveKey = sampleMember.getCircumvent().get(x);
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:193: error: [NullAway] dereferenced expression popMove.getType() is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:193: error: [NullAway] dereferenced expression popMove is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:202: error: [NullAway] dereferenced expression popMove.getType() is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:202: error: [NullAway] dereferenced expression popMove is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:225: error: [NullAway] dereferenced expression sampleMember.getCircumvent() is @Nullable
                    moveKey = sampleMember.getCircumvent().get(x);
                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:233: error: [NullAway] dereferenced expression popMove.getType() is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:233: error: [NullAway] dereferenced expression popMove is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:242: error: [NullAway] dereferenced expression popMove.getType() is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonTeam.java:242: error: [NullAway] dereferenced expression popMove is @Nullable
                        int popMoveR = popMove.getType().resistedCounter(comparedTo1, comparedTo2);
                                              ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
16 errors
